--- a/BSiNS/Src/scr_Entry.fx.yaml
+++ b/BSiNS/Src/scr_Entry.fx.yaml
@@ -596,14 +596,13 @@
                         DisabledColor: =RGBA(166, 166, 166, 1)
                         Font: =App.Theme.Font
                         FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                        Height: =Self.Size * 1.8
+                        Height: =Self.Size * 5
                         OnSelect: =Select(Parent)
                         PaddingBottom: =0
                         PaddingLeft: =0
                         PaddingRight: =0
                         PaddingTop: =0
-                        Text: =ThisItem.FileName
-                        VerticalAlign: =VerticalAlign.Top
+                        Text: =First(Split(Last(Split(ThisItem.FileName, "_")).Value, ".")).Value
                         Width: =Parent.TemplateWidth - 86
                         X: =16
                         Y: =(Parent.TemplateHeight / 2) - (Self.Height / 2)
