--- a/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
+++ b/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
@@ -219,7 +219,7 @@
                                 =Collect(inventureCollection, {
                                     Journal_Template_Name: ThisItem.Journal_Template_Name,
                                     Journal_Batch_Name: ThisItem.Journal_Batch_Name,
-                                    'Line_No.': ThisItem.'Line_No.',
+                                    'Line_No.': Text((CountRows(inventureCollection) + 1) * 10000),
                                     'Document_No.': ThisItem.'Document_No.',
                                     Description: ThisItem.Description,
                                     Source_Type: ThisItem.Source_Type,
@@ -231,12 +231,12 @@
                                     Posting_Date: ThisItem.Posting_Date,
                                     Document_Date: ThisItem.Document_Date,
                                     Sales_Price: ThisItem.Sales_Price,
-                                    Qty_Calculated: ThisItem.Qty_Calculated,
-                                    Qty_Calculated_Ext: ThisItem.Qty_Calculated_Ext,
-                                    Quantity: ThisItem.Quantity,
+                                    Qty_Calculated: Text(0),
+                                    Qty_Calculated_Ext: Text(0),
+                                    Quantity: Text(0),
                                     Entry_Type: ThisItem.Entry_Type,
-                                    Qty_Phys_Inventory: Blank(),
-                                    Qty_Phys_Inventory_Ext: ThisItem.Qty_Phys_Inventory_Ext,
+                                    Qty_Phys_Inventory: Text(0),
+                                    Qty_Phys_Inventory_Ext: Text(0),
                                     Gen_Bus_Posting_Group: ThisItem.Gen_Bus_Posting_Group,
                                     Lot_No: Blank(),
                                     Item_Expiration_Date: ThisItem.Item_Expiration_Date,
