--- a/BSiNS/Src/scr_Entry.fx.yaml
+++ b/BSiNS/Src/scr_Entry.fx.yaml
@@ -597,7 +597,50 @@
                         Font: =App.Theme.Font
                         FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                         Height: =Self.Size * 5
-                        OnSelect: =Select(Parent)
+                        OnSelect: |
+                            =Select(Parent);
+                            Switch(
+                                Parent.Selected.FileType,
+                                "01",
+                                Navigate(scr_XMLTemeljniceInventure, ScreenTransition.Fade),
+                                "02",
+                                Navigate(
+                                    scr_XMLNabavniNalog,
+                                    ScreenTransition.Fade
+                                ),
+                                "03",
+                                Navigate(
+                                    scr_XMLNalogZaProdaju,
+                                    ScreenTransition.Fade
+                                ),
+                                "04",
+                                Navigate(
+                                    scr_XMLNalogZaPrenos,
+                                    ScreenTransition.Fade
+                                ),
+                                "05",
+                                Navigate(
+                                    scr_XMLPrimke,
+                                    ScreenTransition.Fade
+                                ),
+                                "06",
+                                Navigate(
+                                    scr_XMLOtpremnice,
+                                    ScreenTransition.Fade
+                                )
+                            );
+                            Set(
+                                SelectedFile,
+                                Substitute(
+                                    ThisItem.FileName,
+                                    ".xml",
+                                    ""
+                                )
+                            );
+                            Set(
+                                SelectedFolder,
+                                ThisItem.FolderName
+                            );
                         PaddingBottom: =0
                         PaddingLeft: =0
                         PaddingRight: =0
