--- a/BSiNS/Src/scr_Entry.fx.yaml
+++ b/BSiNS/Src/scr_Entry.fx.yaml
@@ -539,8 +539,7 @@
                     Layout: =Layout.Vertical
                     LoadingSpinner: =LoadingSpinner.Data
                     OnSelect: |
-                        =Select(Self);
-                        Switch(
+                        =Switch(
                             Parent.Selected.FileType,
                             "01",
                             Navigate(
@@ -599,48 +598,6 @@
                         Height: =Self.Size * 5
                         OnSelect: |
                             =Select(Parent);
-                            Switch(
-                                Parent.Selected.FileType,
-                                "01",
-                                Navigate(scr_XMLTemeljniceInventure, ScreenTransition.Fade),
-                                "02",
-                                Navigate(
-                                    scr_XMLNabavniNalog,
-                                    ScreenTransition.Fade
-                                ),
-                                "03",
-                                Navigate(
-                                    scr_XMLNalogZaProdaju,
-                                    ScreenTransition.Fade
-                                ),
-                                "04",
-                                Navigate(
-                                    scr_XMLNalogZaPrenos,
-                                    ScreenTransition.Fade
-                                ),
-                                "05",
-                                Navigate(
-                                    scr_XMLPrimke,
-                                    ScreenTransition.Fade
-                                ),
-                                "06",
-                                Navigate(
-                                    scr_XMLOtpremnice,
-                                    ScreenTransition.Fade
-                                )
-                            );
-                            Set(
-                                SelectedFile,
-                                Substitute(
-                                    ThisItem.FileName,
-                                    ".xml",
-                                    ""
-                                )
-                            );
-                            Set(
-                                SelectedFolder,
-                                ThisItem.FolderName
-                            );
                         PaddingBottom: =0
                         PaddingLeft: =0
                         PaddingRight: =0
@@ -661,51 +618,6 @@
                         Icon: =Icon.ChevronRight
                         OnSelect: |
                             =Select(Parent);
-                            Switch(
-                                Parent.Selected.FileType,
-                                "01",
-                                Navigate(
-                                    scr_XMLTemeljniceInventure,
-                                    ScreenTransition.Fade
-                                ),
-                                "02",
-                                Navigate(
-                                    scr_XMLNabavniNalog,
-                                    ScreenTransition.Fade
-                                ),
-                                "03",
-                                Navigate(
-                                    scr_XMLNalogZaProdaju,
-                                    ScreenTransition.Fade
-                                ),
-                                "04",
-                                Navigate(
-                                    scr_XMLNalogZaPrenos,
-                                    ScreenTransition.Fade
-                                ),
-                                "05",
-                                Navigate(
-                                    scr_XMLPrimke,
-                                    ScreenTransition.Fade
-                                ),
-                                "06",
-                                Navigate(
-                                    scr_XMLOtpremnice,
-                                    ScreenTransition.Fade
-                                )
-                            );
-                            Set(
-                                SelectedFile,
-                                Substitute(
-                                    ThisItem.FileName,
-                                    ".xml",
-                                    ""
-                                )
-                            );
-                            Set(
-                                SelectedFolder,
-                                ThisItem.FolderName
-                            );
                         PaddingBottom: =12
                         PaddingLeft: =12
                         PaddingRight: =12
