--- a/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
+++ b/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
@@ -7,7 +7,7 @@
             Blank()
         );
         ClearCollect(
-            lockedLines,
+            lockedItems,
             Blank()
         );
     OnVisible: |
@@ -112,7 +112,7 @@
             )
         );
         ClearCollect(
-            lockedLines,
+            lockedItems,
             ForAll(
                 inventureCollection As line,
                 {
@@ -205,7 +205,7 @@
                         Items: =inventureCollection
                         Layout: =Layout.Vertical
                         LoadingSpinner: =LoadingSpinner.Data
-                        OnSelect: =If(!First(Search(lockedLines, Item_Journal_Lines_Gallery.Selected.'Line_No.', lineId)).isLocked, Set(isModalOpen, true))
+                        OnSelect: =If(!First(Search(lockedItems, Item_Journal_Lines_Gallery.Selected.'Line_No.', lineId)).isLocked, Set(isModalOpen, true))
                         TemplatePadding: =0
                         TemplateSize: =291
                         Width: =Parent.Width
@@ -891,7 +891,7 @@
                         );
                         Clear(inventureCollectionEdited);
                         Reset(inp_rezQty_2);
-                        UpdateIf(lockedLines, ThisRecord.lineId = Item_Journal_Lines_Gallery.Selected.'Line_No.', { isLocked: true });
+                        UpdateIf(lockedItems, ThisRecord.lineId = Item_Journal_Lines_Gallery.Selected.'Line_No.', { isLocked: true });
                         Set(
                             isModalOpen,
                             false
