--- a/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
+++ b/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
@@ -133,6 +133,7 @@
         LayoutAlignItems: =LayoutAlignItems.Stretch
         LayoutDirection: =LayoutDirection.Vertical
         LayoutMode: =LayoutMode.Auto
+        LayoutOverflowX: =LayoutOverflow.Scroll
         RadiusBottomLeft: =4
         RadiusBottomRight: =4
         RadiusTopLeft: =4
@@ -169,6 +170,7 @@
             LayoutMinHeight: =100
             LayoutMinWidth: =250
             LayoutMode: =LayoutMode.Auto
+            LayoutOverflowX: =LayoutOverflow.Scroll
             RadiusBottomLeft: =4
             RadiusBottomRight: =4
             RadiusTopLeft: =4
@@ -774,7 +776,7 @@
                 Y: =0
                 ZIndex: =4
 
-    con_ModalFade_3 As groupContainer.manualLayoutContainer:
+    con_InvModalFade As groupContainer.manualLayoutContainer:
         DropShadow: =DropShadow.Light
         Fill: =RGBA(0, 0, 0, 50%)
         Height: =Parent.Height
@@ -787,7 +789,7 @@
             =Parent.Width
         ZIndex: =2
 
-        vrt_Modal_3 As groupContainer.verticalAutoLayoutContainer:
+        vrt_InvModal As groupContainer.verticalAutoLayoutContainer:
             DropShadow: =DropShadow.ExtraBold
             Fill: =RGBA(255, 255, 255, 1)
             Height: =300
@@ -804,9 +806,12 @@
             Y: =(Parent.Height - Self.Height) / 2
             ZIndex: =2
 
-            Container1 As groupContainer.horizontalAutoLayoutContainer:
+            con_InvModalHeader As groupContainer.horizontalAutoLayoutContainer:
+                AlignInContainer: =AlignInContainer.SetByContainer
                 DropShadow: =DropShadow.Light
                 Fill: =RGBA(189, 49, 51, 1)
+                LayoutAlignItems: =LayoutAlignItems.Center
+                LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
                 LayoutMinHeight: =40
                 LayoutMinWidth: =250
                 LayoutMode: =LayoutMode.Auto
@@ -818,9 +823,9 @@
                 RadiusTopRight: =4
                 ZIndex: =1
 
-                TextCanvas1 As Text:
+                txt_InvModalHeader As Text:
                     Align: ='TextCanvas.Align'.Center
-                    AlignInContainer: =AlignInContainer.Stretch
+                    AutoHeight: =true
                     DisplayMode: =DisplayMode.Edit
                     FillPortions: =1
                     FontColor: =RGBA(255, 255, 255, 1)
@@ -834,9 +839,8 @@
                     Y: =0
                     ZIndex: =1
 
-                ButtonCanvas2_3 As Button:
+                btn_IvnModalClose As Button:
                     Align: =Align.Justify
-                    AlignInContainer: =AlignInContainer.Center
                     Appearance: ='ButtonCanvas.Appearance'.Transparent
                     BasePaletteColor: =
                     DisplayMode: =DisplayMode.Edit
@@ -850,7 +854,7 @@
                     LayoutMinHeight: =32
                     LayoutMinWidth: =96
                     OnSelect: |-
-                        =Reset(inp_rezQty_2);
+                        =Reset(inp_InvQuantity);
                         Set(isModalOpen, false);
                     PaddingBottom: =0
                     PaddingLeft: =0
@@ -862,7 +866,7 @@
                     Y: =40
                     ZIndex: =2
 
-            Container11_3 As groupContainer.verticalAutoLayoutContainer:
+            vrt_InvModalBody As groupContainer.verticalAutoLayoutContainer:
                 AlignInContainer: =AlignInContainer.SetByContainer
                 DropShadow: =DropShadow.Light
                 FillPortions: =3
@@ -882,9 +886,9 @@
                 RadiusTopRight: =4
                 ZIndex: =3
 
-                Container13_12 As groupContainer.verticalAutoLayoutContainer:
+                hrz_InvLOTNo As groupContainer.verticalAutoLayoutContainer:
                     AlignInContainer: =AlignInContainer.SetByContainer
-                    LayoutAlignItems: =LayoutAlignItems.Stretch
+                    LayoutAlignItems: =LayoutAlignItems.Center
                     LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
                     LayoutMinHeight: =30
                     LayoutMinWidth: =250
@@ -898,8 +902,7 @@
                     Visible: =IsBlank(glr_Inv.Selected.Lot_No)
                     ZIndex: =1
 
-                    TextCanvas3_12 As Text:
-                        AlignInContainer: =AlignInContainer.Center
+                    txt_InvLOTNo As Text:
                         AutoHeight: =true
                         DisplayMode: =DisplayMode.Edit
                         FillPortions: =1
@@ -912,9 +915,8 @@
                         Y: =40
                         ZIndex: =1
 
-                    "inp_lotbr As 'Text input'":
+                    "inp_InvLOTNo As 'Text input'":
                         Align: ='TextInputCanvas.Align'.End
-                        AlignInContainer: =AlignInContainer.Center
                         BasePaletteColor: =
                         DisplayMode: =DisplayMode.Edit
                         FontSize: =14
@@ -931,9 +933,9 @@
                         Y: =40
                         ZIndex: =2
 
-                Container13_11 As groupContainer.verticalAutoLayoutContainer:
+                hrz_InvQuantity As groupContainer.verticalAutoLayoutContainer:
                     AlignInContainer: =AlignInContainer.SetByContainer
-                    LayoutAlignItems: =LayoutAlignItems.Stretch
+                    LayoutAlignItems: =LayoutAlignItems.Center
                     LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
                     LayoutMinHeight: =30
                     LayoutMinWidth: =250
@@ -946,8 +948,7 @@
                     RadiusTopRight: =4
                     ZIndex: =2
 
-                    TextCanvas3_11 As Text:
-                        AlignInContainer: =AlignInContainer.Center
+                    txt_InvQuantity As Text:
                         AutoHeight: =true
                         DisplayMode: =DisplayMode.Edit
                         FillPortions: =1
@@ -960,9 +961,8 @@
                         Y: =40
                         ZIndex: =1
 
-                    "inp_rezQty_2 As 'Text input'":
+                    "inp_InvQuantity As 'Text input'":
                         Align: ='TextInputCanvas.Align'.End
-                        AlignInContainer: =AlignInContainer.Center
                         BasePaletteColor: =
                         DisplayMode: =DisplayMode.Edit
                         FontSize: =14
@@ -979,7 +979,7 @@
                         Y: =40
                         ZIndex: =2
 
-            Container10_3 As groupContainer.horizontalAutoLayoutContainer:
+            hrz_InvModalFooter As groupContainer.horizontalAutoLayoutContainer:
                 AlignInContainer: =AlignInContainer.SetByContainer
                 DropShadow: =DropShadow.Light
                 LayoutAlignItems: =LayoutAlignItems.Center
@@ -998,7 +998,7 @@
                 RadiusTopRight: =4
                 ZIndex: =4
 
-                ButtonCanvas3_3 As Button:
+                btn_InvModalSave As Button:
                     BasePaletteColor: =
                     DisplayMode: =DisplayMode.Edit
                     Height: =32
@@ -1013,14 +1013,14 @@
                                 inventureCollection,
                                 ThisRecord.'Line_No.' = glr_Inv.Selected.'Line_No.',
                                 {
-                                    Lot_No: Text(inp_lotbr.Value),
-                                    Qty_Phys_Inventory: Value(inp_rezQty_2.Value)
+                                    Lot_No: Text(inp_InvLOTNo.Value),
+                                    Qty_Phys_Inventory: Value(inp_InvQuantity.Value)
                                 }
                             ),
                             UpdateIf(
                                 inventureCollection,
                                 ThisRecord.'Line_No.' = glr_Inv.Selected.'Line_No.',
-                                {Qty_Phys_Inventory: Value(inp_rezQty_2.Value)}
+                                {Qty_Phys_Inventory: Value(inp_InvQuantity.Value)}
                             )
                         );
                         ClearCollect(
@@ -1032,7 +1032,7 @@
                             inventureCollectionEdited
                         );
                         Clear(inventureCollectionEdited);
-                        Reset(inp_rezQty_2);
+                        Reset(inp_InvQuantity);
                         UpdateIf(
                             lockedItems,
                             ThisRecord.lineId = glr_Inv.Selected.'Line_No.',
